[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Swarnabh Roy swarnabh.roy@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/SwarnabhR/grrs"
repository = "https://github.com/SwarnabhR/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
anyhow = "1.0.86"
indicatif = "0.17.8"